--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.4",
+		"lucide-svelte": "^0.503.0",
 		"tailwindcss": "^4.1.4"
 	}
 }
