--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.2.5",
+		"@fontsource/pt-serif": "^5.2.5",
 		"@tailwindcss/vite": "^4.1.4",
 		"lucide-svelte": "^0.503.0",
 		"tailwindcss": "^4.1.4"
