--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"daisyui": "^5.0.27",
@@ -29,6 +28,7 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.2.5",
 		"@fontsource/pt-serif": "^5.2.5",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/vite": "^4.1.4",
 		"lucide-svelte": "^0.503.0",
 		"tailwindcss": "^4.1.4"
