--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/vite": "^4.1.4",
 		"lucide-svelte": "^0.503.0",
+		"super-sitemap": "^1.0.3",
 		"tailwindcss": "^4.1.4"
 	}
 }
